--- a/toDo List/index.html
+++ b/toDo List/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1 id="heading" class="heading">To-Do List</h1>
+    <input type="text" id="list" class="list" />
+    <button id="addText" class="addText">Enter</button>
 </body>
 </html>
