--- a/toDo List/index.html
+++ b/toDo List/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo Lists</title>
-</head>
-<body>
-    <h1 id="heading" class="heading">To-Do List</h1>
-    <input type="text" id="list" class="list" />
-    <button id="addText" class="addText">Enter</button>
-</body>
-</html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Todo Lists</title>
+        </head>
+        <body>
+            <h1 id="heading" class="heading">To-Do List</h1>
+            <input type="text" id="list" class="list" />
+            <button id="addText" class="addText">Enter</button>
+            <ul id="unOrdered" class="unOrdered"></ul>
+        </body>
+        <script src="script.js"></script>
+    </html>
